# 11_Diplom_work

./: CMakeLists.txt  README.txt  config.ini  ini_parser.cpp  ini_parser.h  запуск паук.txt
http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
spider/: CMakeLists.txt  config.ini  http_utils.cpp  http_utils.h  main.cpp
